--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview",
-    "tauri": "tauri"
+    "tauri": "tauri",
+    "lint": "eslint ."
   },
   "dependencies": {
     "@tauri-apps/api": "^1.0.2",
@@ -32,6 +33,8 @@
     "@tauri-apps/cli": "^1.0.5",
     "@types/node": "^18.6.3",
     "@vitejs/plugin-vue": "^3.0.1",
+    "@zheqi/eslint-config": "^1.0.0",
+    "eslint": "^8.21.0",
     "sass": "^1.54.0",
     "typescript": "^4.7.4",
     "unocss": "^0.45.1",
