--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,3 @@
 VITE_APP_URL=https://netease-cloud-music-api-zhe-qi.vercel.app
+# 添加到请求结尾，具体参考https://neteasecloudmusicapi.js.org/#/?id=neteasecloudmusicapi
 VITE_APP_ENDURL=&realIP=116.25.146.177
